# jackthebox

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs
.github/workflows/: release.yml
example_addon/: Addon.cs  ExampleAddon.csproj
loader/: AssemblyLoader.cs  ContextAssemblyLoader.cs  Loader.cs  Loader.csproj  Log.cs  README.md  RealmWatcher.cs  prebuild.ps1
src/: host.rs  lib.rs  utility.rs
