[package]
name = "sboxject"
version = "0.1.0"
authors = ["dank <git@dank.anonaddy.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"       # turn on Link-Time Optimizations
codegen-units = 1 # trade compile time with maximum optimization
opt-level = "z"   # optimize for size
strip = "symbols"

[dependencies]
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4"

[dependencies.windows]
version = "0.39"
features = [
    "Win32_Foundation",
    "Win32_System_WindowsProgramming",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Security",
]
